Modified icon container for mobile view

--- a/index.html
+++ b/index.html
@@ -535,12 +535,12 @@
         </div>
       </div>
     </section>
-
+    <!-- Fifth section -->
     <section class="fifth-section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
-            <div class="d-flex ms-md-4 flex-column meta-icons">
+            <div class="d-flex ms-md-3 flex-column meta-icons">
               <a class="navbar-brand" href="./index.html"
                 ><img
                   src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Meta-Logo.png/800px-Meta-Logo.png?20211104123859"
@@ -548,12 +548,12 @@
               /></a>
 
               <span class="follow-us"> Follow us </span><br />
-              <div class="links icon-container">
-                <i class="fa-brands icons p-0 m-0 p-1 3x fa-facebook"></i>
-                <i class="fa-brands icons p-0 m-0 p-1 3x fa-instagram"></i>
-                <i class="fa-brands icons p-0 m-0 p-1 3x fa-youtube"></i>
-                <i class="fa-brands icons p-0 m-0 p-1 3x fa-twitter"></i>
-                <i class="fa-brands icons p-0 m-0 p-1 3x fa-linkedin"></i>
+              <div class="links icon-container p-0">
+                <i class="fa-brands icons p-0 mx-1 fa-facebook"></i>
+                <i class="fa-brands icons p-0 mx-1 fa-instagram"></i>
+                <i class="fa-brands icons p-0 mx-1 fa-youtube"></i>
+                <i class="fa-brands icons p-0 mx-1 fa-twitter"></i>
+                <i class="fa-brands icons p-0 mx-1 fa-linkedin"></i>
               </div>
             </div>
           </div>
