Fixed navbar icon rotation

--- a/index.html
+++ b/index.html
@@ -55,67 +55,69 @@
                 class="logo img-fluid d-block"
             /></a>
           </div>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse ms-md-4" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item mx-md-3">
                 <a
                   role="button"
-                  class="nav-link p-0 active"
+                  class="nav-link a p-0"
                   href="#shop"
                   data-bs-toggle="collapse"
                   aria-expanded="false"
                   aria-controls="shop"
                 >
                   <span> Shop</span>
-                  <i class="fa-solid fa-chevron-down mx-1"></i>
+                  <i class="fa-solid fa-chevron-down icon mx-1"></i>
                 </a>
               </li>
               <div id="shop"></div>
               <li class="nav-item mx-md-3">
                 <a
                   role="button"
-                  class="nav-link p-0"
+                  class="nav-link a p-0"
                   href="#our-technologies"
                   data-bs-toggle="collapse"
                   aria-expanded="false"
                   aria-controls="our-technologies"
                 >
-                  Our Technologies <i class="fa-solid fa-chevron-down mx-1"></i>
+                  Our Technologies
+                  <i class="fa-solid fa-chevron-down icon mx-1"></i>
                 </a>
               </li>
 
               <li class="nav-item mx-md-3">
                 <a
                   role="button"
-                  class="nav-link p-0"
+                  class="nav-link a p-0"
                   href="#about-us"
                   data-bs-toggle="collapse"
                   aria-expanded="false"
                   aria-controls="about-us"
-                  >About us <i class="fa-solid fa-chevron-down mx-1"></i>
+                  >About us <i class="fa-solid fa-chevron-down icon mx-1"></i>
                 </a>
               </li>
               <li class="nav-item mx-md-3">
                 <a
-                  class="nav-link p-0"
+                  class="nav-link a p-0"
                   role="button"
                   data-bs-toggle="collapse"
                   href="#build-with-us"
                   aria-expanded="false"
-                  >Build with us <i class="fa-solid fa-chevron-down mx-1"></i
+                  >Build with us
+                  <i class="fa-solid fa-chevron-down icon mx-1"></i
                 ></a>
               </li>
             </ul>
 
             <div class="navbar-nav ms-md-auto">
-              <li class="nav-item mx-md-3 mt-md-2">
+              <li class="nav-item mx-md-3 support mt-md-2">
                 <a
-                  class="nav-link p-0"
+                  class="nav-link a p-0"
                   role="button"
                   href="#support"
                   aria-expanded="false"
                   data-bs-toggle="collapse"
-                  >Support <i class="fa-solid fa-chevron-down mx-1"></i
+                  >Support <i class="fa-solid fa-chevron-down icon mx-1"></i
                 ></a>
               </li>
               <li class="nav-item mx-md-3 p-2">
@@ -1084,7 +1086,7 @@
 
     <!-- Footer -->
 
-    <footer>
+    <footer class="px-3">
       <p class="text-center footer my-auto">
         &copy; Copyright gopaladhikari 2022. All Rights Reserved
       </p>
